--- a/_posts/2017-08-13-JSON.md
+++ b/_posts/2017-08-13-JSON.md
@@ -58,3 +58,85 @@ console.log(JSON.stringify({sports:'soccer', player:11}, "" ,"##"))
 
 ```
 
+---
+
+> new Function()
+
+```js
+var obj = new Function('book', 'title',  "return book + ': ' + title")
+console.log(obj('책','자바스크립트')) //책: 자바스크립트
+
+obj = new Function(' return 1 + 2')
+console.log(obj()) //3
+```
+
+> function  
+
+생성한 Funtion 인스턴스에 length 프로퍼티가 설정되며  
+함수에 설정된 파라미터가 length로 나타난다.  
+없으면 0 , 1개면 1로 나타난다.  
+
+## 함수 분류  
+
+- 개요  
+일반적으로 function 키워드를 사용하여 function 오브젝트 생성  
+
+function getBook(title){return title};
+
+- function 오브젝트(인스턴스) 생성  
+JS엔진이 function 키워드를 만나면 이름이 getBook인 오브젝트 생성  
+
+new 연산자를 사용하지 않았으므로 오브젝트로 표기 성격측면에서 보면 인스턴스  
+
+## 함수 생명 주기  
+
+- 함수 호출  
+```js
+function getBook(title){return title};
+var result = getBook('자바스크립트');
+```
+함수를 호출하면서 파라미터 값으로 '자바스크립트'를 넘겨 줌  
+getBook() 앞에 오브젝트를 지정하지 않으면 글로벌 오브젝트의 함수  
+
+- 함수 코드 실행  
+
+자바스크립트 엔진 컨트롤이 함수로 이동  
+파라미터 이름에 넘겨 받은 파라미터 값 매핑  
+함수 블록{} 안의 코드 실행  
+return 문에 관계없이 반환 값을 갖고 함수를 호출한 곳으로 돌아감  
+할당 연산자가 있으므로 변환된 값을 result 변수에 할당  
+
+## 함수 형태  
+
+> 함수 선언문  
+
+function getBook(book){ code }
+- function 키워드, 함수 이름, 블록{} 작성을 필수  
+- 파라미터, 블록 안의 코드 작성은 선택  
+
+```js
+function myHome(book, video, )
+```
+
+
+
+
+> 함수 표현식  
+
+var getBook = function(book){ code }  
+
+두개가 어떤 차이가 있을까?  
+
+---
+### 인스턴스 VS 객체  
+
+> 인스턴스  
+
+원래 객체를 손상시키지 않고 다른 값을 설정하게끔 하는 것.  
+
+> 객체  
+
+객체는 독립적이여야한다. 객체는 그 자체에서 끝을 내야한다.  
+
+
+---
