--- a/_posts/2017-08-13-JSON.md
+++ b/_posts/2017-08-13-JSON.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title: "[JS] 4일차"
-description: "JSON"
+description: "JSON, 함수, Math, ES5"
 date: 2017-08-13
-tags: [JSON, parse, stringify]
+tags: [JSON, parse, stringify, 인스턴스, 객체]
 comments: true
 share: true
 ---
@@ -147,8 +147,83 @@ function getTotal(one, two){
 console.log(getTotal.call(this, 10, 20));
 ```
 
+> apply()
+
+- apply 사용이유  
+- 파라미터수가 유동적일 때 사용  
+호출받는 파라미터 이름 매핑이 어려워 가독성 떨어짐.  
+파라미터를 배열로 넘겨줘야한다.   
+
+```js
+function getTotal() {
+  var total =0;
+  for (var k=0; k < arguments.length; k++){
+    total += arguments[k];
+  }
+  return total;
+}
+
+console.log(getTotal.apply(this, [10, 20, 30])) // 60
+
+```
+
+---
+# Boolean  
+
+- true, false로 구성  
+- 값이 undefined, null이면 false로 인식한다.  
+- 숫자 타입으로 0 또는 NaN이면 false로 인식, 값이 있으면 true로 인식한다.  
+
+---
+# Math  
+
+상수, 절댓값, 반올림, 사인, 탄젠트  
+
+`-0 과 +0의 차이 컴퓨터의 입장에서는 64bit에서 가장 좌측에 0인지 1인지에 따라 다르다.`  
+
+
+
+``생략한다.``
+
+> floor()
+
+내림
+
+> ceil()
+
+올림  
+
+> round()
+
+반올림  
+
+---  
+# UTC  
+
+- 월은 0부터 시작, 0: 1월, 1: 2월, 2: 3월
+- 일은 1에서 31일 까지 정수로 표시
+- 일요일은 0, 월요일은 1 ... 토요일은 6  
+
+# Date  
+
+시간이 중요한 경우에는 클라이언트의 시간을 사용자가 변경 가능 `서버 시간` 사용.
+
 ---
 
+# ES5
+
+> Object 오브젝트  
+
+추가된 것은 모두 함수이며 메소드 없음.  
+new 연산자로 생성한 인스턴스에 함수가 할당되지 않으므로 함수에 값을 파라미터로 넘겨주어 처리.  
+
+> 인스턴스 생성 목적  
+
+프로퍼티 이름은 같지만 인스턴스마다 다른 값을 가지려는 것.  
+Object의 prototype에 연결된 메소드는 모든 빌트인 오브젝트에 상속   
+상속할 필요가 없다면 함수가 효율적  
+
+---
 ### 인스턴스 VS 객체  
 
 > 인스턴스  
