--- a/_posts/2017-08-13-JSON.md
+++ b/_posts/2017-08-13-JSON.md
@@ -275,7 +275,24 @@ result = obj.book;
 console.log(result);
 ```
 
+> getPrototypeOf()
 
+```js
+function Book(){
+  this.count = 123;
+};
+
+Book.prototype = {
+  getValue: function() {},
+  getAmount: function() {}
+}
+var obj = new Book();
+
+var result = Object.getPrototypeOf(obj);
+for (var key in result){
+  console.log(key)
+}
+```
 
 ---
 ### 인스턴스 VS 객체  
