--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -2,34 +2,46 @@
 layout: post
 title: "[스터디]모집공고 초안"
 description: " Angular2 와 Ionic2를 이용한 어플리케이션 만들기 "
-date: 2017-08-12
+date: 2017-08-15
 tags: [Front-end, Angular2, Ionic2, Github]
 comments: true
 share: true
 ---
-# 승환's 스터디 Part.1  
+### Side Project Part.1  
 
-## Part.1: 타오르는 초가 다 꺼지기 전에 완성한다.  
+# Part.1: 타오르는 초가 다 꺼지기 전에 완성한다.  
 
-> 목적  
+> 목표하는 것    
 
 `Angular2 와 Ionic2를 이용한 어플리케이션 만들기`  
-스터디와 병행하면서 어플리케이션 만들려합니다.  
+스터디와 병행하면서 어플리케이션 만들 것 입니다.  
 
 > 사용하는 것  
 
-```sh
-활용: **AngularJS 2**, typescript,  **ionic 2**, cordova, javascript, html, css, sass, ajax, axios 
+- 활용  
+**AngularJS 2**, typescript,  **ionic 2**, cordova, javascript  
+html, css, [BEM](http://getbem.com/), sass, axios 기타 .. 
 
-협업: Trello, Slack, Google Drive, Github
+- 협업  
+Trello, Slack, Google Drive, Github, Google 행아웃  
 
-중요: Git연동(Hexo, Jekyll) 등 Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다. 
+- 중요  
+Git연동(Hexo, Jekyll) 등 Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.  
 
-문서를 남겨 자신의 역사를 쓰세요.  
-```
+``문서를 남겨 자신의 역사를 쓰세요.``  
 
 > 요구하는 것  
 
 마인드: 마인드에 불 붙이고 와주세요. 타오르는 분들 환영합니다. 
 
 커뮤니케이션: 스터디 목적은 어플리케이션 완성.  
+
+> 모임장소, 시간 및   
+
+- Offline
+장소: 강남역  
+시간: 저녁 8시  
+
+- Online  
+장소: Google 행아웃  
+시간: 저녁 8시  
