--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -13,8 +13,8 @@ share: true
 
 > 목표하는 것    
 
-`Angular2 와 Ionic2를 이용한 어플리케이션 만들기`  
-스터디와 병행하면서 어플리케이션 만들 것 입니다.  
+스터디와 병행하면서 `어플리케이션 만들 것` 입니다.  
+필자는 Angular2, Ionic2를 모릅니다. `알아가려합니다.`  
 
 > 사용하는 것  
 
@@ -26,22 +26,34 @@ html, css, [BEM](http://getbem.com/), sass, axios 기타 ..
 Trello, Slack, Google Drive, Github, Google 행아웃  
 
 - 중요  
-Git연동(Hexo, Jekyll) 등 Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.  
+Git연동(Hexo, Jekyll) 등 Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.
+Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할 수 있습니다.    
 
-``문서를 남겨 자신의 역사를 쓰세요.``  
+``문서를 남겨 내가 무엇을 했는지 꼭 남기세요.``  
 
 > 요구하는 것  
 
-마인드: 마인드에 불 붙이고 와주세요. 타오르는 분들 환영합니다. 
+- 마인드  
+마인드에 불 붙이고 와주세요. 타오르는 분들 환영합니다.  
+저기위에 적힌거 저도 잘 모릅니다. 같이 고민해가며 진행할 분 환영합니다.  
 
-커뮤니케이션: 스터디 목적은 어플리케이션 완성.  
+- 커뮤니케이션  
+목표를 위해 자신의 의견, 의사를 어필해 할 수 있는분.  
 
-> 모임장소, 시간 및   
+> 모임장소, 시간 및 기간 
 
-- Offline
-장소: 강남역  
-시간: 저녁 8시  
+- 프로젝트 기간  
+진행기간: 10주 ()
 
-- Online  
+- Offline(월, 수)
+장소: 강남역(세부장소 추후 예정)  
+시간: 저녁 8시 - 10시 30분 
+
+- Online(화, 목)  
 장소: Google 행아웃  
-시간: 저녁 8시  
+시간: 저녁 8시 - 8시 15분  
+
+`금, 토, 일은 계획 아직 없습니다.`  
+
+
+ 
