--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -43,9 +43,11 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 > 모임장소, 시간 및 기간 
 
 - 프로젝트 기간  
-진행기간: 10주 ()
+진행기간: 10주  
+플젝시작: 9월 4일(월)  
+플젝마감: 11 월 11일(토)  
 
-- Offline(월, 수)
+- Offline(월, 수)  
 장소: 강남역(세부장소 추후 예정)  
 시간: 저녁 8시 - 10시 30분 
 
@@ -54,6 +56,8 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 시간: 저녁 8시 - 8시 15분  
 
 `금, 토, 일은 계획 아직 없습니다.`  
+
+>  
 
 
  
