--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "[스터디]모집공고 초안"
-description: " Angular2 와 Ionic2를 이용한 어플리케이션 만들기 "
+description: "Angular2 와 Ionic2를 이용한 어플리케이션 만들기"
 date: 2017-08-15
 tags: [Front-end, Angular2, Ionic2, Github]
 comments: true
@@ -57,7 +57,20 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 
 `금, 토, 일은 계획 아직 없습니다.`  
 
->  
+> 소개 및 당부의 말  
 
+- 소개  
+비전공자입니다.  
+패스트캠퍼스 스쿨 3기 수료생입니다.  
+저는 17년 1월 부터 처음으로 Front-end분야 공부를 시작했습니다.  
+새벽에 운동, 집에가는길 오버워치, 롤, 그 이외엔 공부에 매달렸습니다.  
+`Front-end직군으로 6월 중순 스타트업에 입사했습니다.`  
 
- 
+- 당부의 말
+저도 부족합니다.  
+지금 하려는 스터디의 주제가 결코 쉽지 않을겁니다.  
+`하지만 중도포기 없이 이끌어 가고싶습니다.`  
+어떻게? 전 포기하지 않을거니까요.  
+평소 스터디를 만나서 각자 공부하는것에서 멈췄습니다.  
+물론 좋지만, 공부한것을 활용해 만들어보고 싶어서 이렇게 스터디 인원을 모아봅니다.  
+
