--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -7,6 +7,10 @@ tags: [Front-end, Angular2, Ionic2, Github]
 comments: true
 share: true
 ---
+
+최초작성일: 17.08.15  
+최종작성일: 17.08.15  
+
 ### Side Project Part.1  
 
 # Part.1: 타오르는 초가 다 꺼지기 전에 완성한다.  
@@ -20,15 +24,15 @@ share: true
 
 - 활용  
 **AngularJS 2**, typescript,  **ionic 2**, cordova, javascript  
-html, css, [BEM](http://getbem.com/), sass, axios 기타 .. 
+firebase, SQL, html, css, [BEM](http://getbem.com/), sass, axios 기타 .. 
+일단 쓸거같은거 적어봤습니다.  
 
 - 협업  
 Trello, Slack, Google Drive, Github, Google 행아웃  
 
 - 중요  
-Git연동(Hexo, Jekyll) 등 Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.
-Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할 수 있습니다.    
-
+Git연동(Hexo, Jekyll) Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.  
+Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할 수 있습니다.  
 ``문서를 남겨 내가 무엇을 했는지 꼭 남기세요.``  
 
 > 요구하는 것  
@@ -43,9 +47,7 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 > 모임장소, 시간 및 기간 
 
 - 프로젝트 기간  
-진행기간: 10주  
-플젝시작: 9월 4일(월)  
-플젝마감: 11 월 11일(토)  
+10주, 9월 4일(월) - 11 월 11일(토)    
 
 - Offline(월, 수)  
 장소: 강남역(세부장소 추후 예정)  
@@ -57,6 +59,25 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 
 `금, 토, 일은 계획 아직 없습니다.`  
 
+> 약간의 절차가 있습니다.  
+
+1. Github
+
+<img width="740" alt="2017-08-15 7 04 35" src="https://user-images.githubusercontent.com/25549306/29311363-ab90455e-81ec-11e7-845f-a4ece045d39e.png">
+
+`색을 3칸이상 채워주세요.`  
+
+2. Github + Blog
+hexo, jekyll 상관없습니다.   
+자신의 글 1개 이상 작성해주세요.  
+
+3. Codecademy  
+
+<img width="1280" alt="2017-08-15 7 19 44" src="https://user-images.githubusercontent.com/25549306/29312034-c0ab35be-81ee-11e7-8e6d-5ae1efe5404d.png">
+  
+`Javascript과정 2가지가 있습니다.` 
+쉬운것, 어려운것. 둘다 100%를 인증해주세요.  
+
 > 소개 및 당부의 말  
 
 - 소개  
@@ -66,11 +87,17 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 새벽에 운동, 집에가는길 오버워치, 롤, 그 이외엔 공부에 매달렸습니다.  
 `Front-end직군으로 6월 중순 스타트업에 입사했습니다.`  
 
-- 당부의 말
+- 당부의 말  
 저도 부족합니다.  
 지금 하려는 스터디의 주제가 결코 쉽지 않을겁니다.  
 `하지만 중도포기 없이 이끌어 가고싶습니다.`  
 어떻게? 전 포기하지 않을거니까요.  
+`이력서에 Angular2, Ionic2 적고 싶습니다.`  
 평소 스터디를 만나서 각자 공부하는것에서 멈췄습니다.  
 물론 좋지만, 공부한것을 활용해 만들어보고 싶어서 이렇게 스터디 인원을 모아봅니다.  
+
+- 기획 to 개발  
+기획부터 개발까지 해야합니다.  
+비록 개발자이지만 꼭 겪어봐야할 경험인거 같습니다.  
+스터디 그 이상의 효과를 보고싶은 분은 와주셨으면 합니다.  
 
