--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -68,15 +68,22 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 `색을 3칸이상 채워주세요.`  
 
 2. Github + Blog
+
+
+<img width="836" alt="2017-08-15 7 43 02" src="https://user-images.githubusercontent.com/25549306/29312791-ffcc7dcc-81f1-11e7-8e13-dd987aeb904b.png">
 hexo, jekyll 상관없습니다.   
 자신의 글 1개 이상 작성해주세요.  
 
 3. Codecademy  
 
-<img width="1280" alt="2017-08-15 7 19 44" src="https://user-images.githubusercontent.com/25549306/29312034-c0ab35be-81ee-11e7-8e6d-5ae1efe5404d.png">
-  
+<img width="1270" alt="2017-08-15 7 41 46" src="https://user-images.githubusercontent.com/25549306/29312758-d638ec3e-81f1-11e7-8b85-e8b83afe158f.png">
+
 `Javascript과정 2가지가 있습니다.` 
 쉬운것, 어려운것. 둘다 100%를 인증해주세요.  
+
+```sh
+1 + 2 + 3을 한 후 Facebook message로 알람 주시면 연락 드리겠습니다.  
+```
 
 > 소개 및 당부의 말  
 
