--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -24,7 +24,7 @@ share: true
 
 - 활용  
 **AngularJS 2**, typescript,  **ionic 2**, cordova, javascript  
-firebase, SQL, html, css, [BEM](http://getbem.com/), sass, axios 기타 .. 
+firebase, SQL, html, css, BEM, sass, axios 기타 ..  
 일단 쓸거같은거 적어봤습니다.  
 
 - 협업  
@@ -83,9 +83,9 @@ hexo, jekyll 상관없습니다.
 `Javascript과정 2가지가 있습니다.` 
 쉬운것, 어려운것. 둘다 100%를 인증해주세요.  
 
-```sh
-1 + 2 + 3을 한 후 Facebook message로 알람 주시면 연락 드리겠습니다.  
-```
+
+### <U>1 + 2 + 3을 한 후 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
+
 
 > 소개 및 당부의 말  
 
