--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -17,8 +17,8 @@ share: true
 
 > 목표하는 것    
 
-스터디와 병행하면서 `어플리케이션 만들 것` 입니다.  
-필자는 Angular2, Ionic2를 모릅니다. `알아가려합니다.`  
+Angular2 와 Ionic2 스터디 병행하며 `어플리케이션 만들 것` 입니다.  
+`새로운 것을 같이 알아가실 분.`  
 
 > 사용하는 것  
 
@@ -110,3 +110,4 @@ hexo, jekyll 상관없습니다.
 비록 개발자이지만 꼭 겪어봐야할 경험인거 같습니다.  
 스터디 그 이상의 효과를 보고싶은 분은 와주셨으면 합니다.  
 
+이상 마치겠습니다. 읽어주셔서 감사합니다.  
