--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -44,10 +44,10 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 - 커뮤니케이션  
 목표를 위해 자신의 의견, 의사를 어필해 할 수 있는분.  
 
-> 모임장소, 시간 및 기간 
+> 모임장소, 시간 및 기간  
 
 - 프로젝트 기간  
-10주, 9월 4일(월) - 11 월 11일(토)    
+약 10주, 9월 4일(월) - 11월 11일(토)    
 
 - Offline(월, 수)  
 장소: 강남역(세부장소 추후 예정)  
@@ -84,7 +84,7 @@ hexo, jekyll 상관없습니다.
 쉬운것, 어려운것. 둘다 100%를 인증해주세요.  
 
 
-### <U>1 + 2 + 3을 한 후 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
+### <U>세가지 완료 후 인증과 전화번호를 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
 
 
 > 소개 및 당부의 말  
@@ -98,16 +98,16 @@ hexo, jekyll 상관없습니다.
 
 - 당부의 말  
 저도 부족합니다.  
-지금 하려는 스터디의 주제가 결코 쉽지 않을겁니다.  
+지금 하려는 스터디 쉽지 않을겁니다.  
 `하지만 중도포기 없이 이끌어 가고싶습니다.`  
 어떻게? 전 포기하지 않을거니까요.  
 `이력서에 Angular2, Ionic2 적고 싶습니다.`  
-평소 스터디를 만나서 각자 공부하는것에서 멈췄습니다.  
-물론 좋지만, 공부한것을 활용해 만들어보고 싶어서 이렇게 스터디 인원을 모아봅니다.  
+평소 스터디는 만나서 각자 공부했습니다.  
+물론 좋습니다 그렇지만 배운걸 통해 결과물을 만들고 싶어 스터디 인원을 모아봅니다.  
 
 - 기획 to 개발  
 기획부터 개발까지 해야합니다.  
 비록 개발자이지만 꼭 겪어봐야할 경험인거 같습니다.  
 스터디 그 이상의 효과를 보고싶은 분은 와주셨으면 합니다.  
 
-이상 마치겠습니다. 읽어주셔서 감사합니다.  
+# 이상 마치겠습니다. 읽어주셔서 감사합니다.  
