--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -17,7 +17,7 @@ share: true
 
 > 목표하는 것    
 
-Angular2 와 Ionic2 스터디 병행하며 `어플리케이션 만들 것` 입니다.  
+Angular 2 와 Ionic 2 스터디 병행하며 `애플리케이션 만들 것` 입니다.  
 `새로운 것을 같이 알아가실 분.`  
 
 > 사용하는 것  
@@ -32,19 +32,19 @@ Trello, Slack, Google Drive, Github, Google 행아웃
 
 - 중요  
 Git연동(Hexo, Jekyll) Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.  
-Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할 수 있습니다.  
+Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득할 수 있습니다.  
 ``문서를 남겨 내가 무엇을 했는지 꼭 남기세요.``  
 
 > 요구하는 것  
 
 - 마인드  
-마인드에 불 붙이고 와주세요. 타오르는 분들 환영합니다.  
-저기위에 적힌거 저도 잘 모릅니다. 같이 고민해가며 진행할 분 환영합니다.  
+마인드에 불붙이고 와주세요. 타오르는 분들 환영합니다.  
+같이 고민해가며 진행할 분 환영합니다.  
 
 - 커뮤니케이션  
-목표를 위해 자신의 의견, 의사를 어필해 할 수 있는분.  
+목표를 위해 자신의 의견, 의사를 어필해 할 수 있는 분.  
 
-> 모임장소, 시간 및 기간  
+> 모임 장소, 시간 및 기간  
 
 - 프로젝트 기간  
 약 10주, 9월 4일(월) - 11월 11일(토)    
@@ -65,7 +65,7 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 
 <img width="740" alt="2017-08-15 7 04 35" src="https://user-images.githubusercontent.com/25549306/29311363-ab90455e-81ec-11e7-845f-a4ece045d39e.png">
 
-`색을 3칸이상 채워주세요.`  
+`색을 3칸 이상 채워주세요.`  
 
 - Github + Blog
 
@@ -73,18 +73,18 @@ Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득 할
 <img width="836" alt="2017-08-15 7 43 02" src="https://user-images.githubusercontent.com/25549306/29312791-ffcc7dcc-81f1-11e7-8e13-dd987aeb904b.png">
 
 ---
-hexo, jekyll 상관없습니다.   
+Hexo, Jekyll 상관없습니다.   
 자신의 글 1개 이상 작성해주세요.  
 
 - Codecademy  
 
 <img width="1270" alt="2017-08-15 7 41 46" src="https://user-images.githubusercontent.com/25549306/29312758-d638ec3e-81f1-11e7-8b85-e8b83afe158f.png">
 
-`Javascript과정 2가지가 있습니다.` 
-쉬운것, 어려운것. 둘다 100%를 인증해주세요.  
+`Javascript 과정 2가지가 있습니다.` 
+쉬운 것, 어려운 것. 둘 다 100%를 인증해주세요.  
 
 
-### <U>세가지 완료 후 인증과 전화번호를 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
+### <U> 세가지 완료 후 인증과 전화번호를 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
 
 
 > 소개 및 당부의 말  
@@ -92,22 +92,22 @@ hexo, jekyll 상관없습니다.
 - 소개  
 비전공자입니다.  
 패스트캠퍼스 스쿨 3기 수료생입니다.  
-저는 17년 1월 부터 처음으로 Front-end분야 공부를 시작했습니다.  
+저는 17년 1월부터 처음으로 Front-end분야 공부를 시작했습니다.  
 새벽에 운동, 집에가는길 오버워치, 롤, 그 이외엔 공부에 매달렸습니다.  
 `Front-end직군으로 6월 중순 스타트업에 입사했습니다.`  
 
 - 당부의 말  
 저도 부족합니다.  
-지금 하려는 스터디 쉽지 않을겁니다.  
-`하지만 중도포기 없이 이끌어 가고싶습니다.`  
-어떻게? 전 포기하지 않을거니까요.  
-`이력서에 Angular2, Ionic2 적고 싶습니다.`  
+지금 하려는 스터디 쉽지 않을 겁니다.  
+`하지만 중도 포기 없이 이끌어 가고 싶습니다.`  
+어떻게? 전 포기하지 않을 거니까요.  
+`이력서에 Angular 2, Ionic 2 적고 싶습니다.`  
 평소 스터디는 만나서 각자 공부했습니다.  
-물론 좋습니다 그렇지만 배운걸 통해 결과물을 만들고 싶어 스터디 인원을 모아봅니다.  
+물론 좋습니다 그렇지만 배운 걸 통해 결과물을 만들고 싶어 스터디 인원을 모아봅니다.  
 
 - 기획 to 개발  
-기획부터 개발까지 해야합니다.  
-비록 개발자이지만 꼭 겪어봐야할 경험인거 같습니다.  
-스터디 그 이상의 효과를 보고싶은 분은 와주셨으면 합니다.  
+기획부터 개발까지 해야 합니다.  
+개발자이지만 꼭 경험해봤으면 합니다.  
+스터디 그 이상의 효과를 보고 싶은 분은 와주셨으면 합니다.  
 
 # 이상 마치겠습니다. 읽어주셔서 감사합니다.  
