--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "[스터디]모집공고 초안"
-description: "Angular2 와 Ionic2를 이용한 어플리케이션 만들기"
+description: "Angular 2 와 Ionic 2를 이용한 애플리케이션 만들기"
 date: 2017-08-15
 tags: [Front-end, Angular2, Ionic2, Github]
 comments: true
@@ -17,7 +17,7 @@ share: true
 
 > 목표하는 것    
 
-Angular 2 와 Ionic 2 스터디 병행하며 `애플리케이션 만들 것` 입니다.  
+Angular 2와 Ionic 2 스터디 병행하며 `애플리케이션 만들 것` 입니다.  
 `새로운 것을 같이 알아가실 분.`  
 
 > 사용하는 것  
@@ -25,14 +25,13 @@ Angular 2 와 Ionic 2 스터디 병행하며 `애플리케이션 만들 것` 입
 - 활용  
 **AngularJS 2**, typescript,  **ionic 2**, cordova, javascript  
 firebase, SQL, html, css, BEM, sass, axios 기타 ..  
-일단 쓸거같은거 적어봤습니다.  
 
 - 협업  
 Trello, Slack, Google Drive, Github, Google 행아웃  
 
 - 중요  
-Git연동(Hexo, Jekyll) Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.  
-Git연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득할 수 있습니다.  
+Git 연동(Hexo, Jekyll) Blog를 운영하여 블로그에 진행 과정 담기. 필수 사항입니다.  
+Git 연동 블로그를 사용하신다면 자연스럽게 Markdown을 습득할 수 있습니다.  
 ``문서를 남겨 내가 무엇을 했는지 꼭 남기세요.``  
 
 > 요구하는 것  
@@ -84,7 +83,7 @@ Hexo, Jekyll 상관없습니다.
 쉬운 것, 어려운 것. 둘 다 100%를 인증해주세요.  
 
 
-### <U> 세가지 완료 후 인증과 전화번호를 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
+### <U> 세 가지 완료 후 인증과 전화번호를 Facebook message로 알람 주시면 연락 드리겠습니다.</U>  
 
 
 > 소개 및 당부의 말  
@@ -92,8 +91,8 @@ Hexo, Jekyll 상관없습니다.
 - 소개  
 비전공자입니다.  
 패스트캠퍼스 스쿨 3기 수료생입니다.  
-저는 17년 1월부터 처음으로 Front-end분야 공부를 시작했습니다.  
-새벽에 운동, 집에가는길 오버워치, 롤, 그 이외엔 공부에 매달렸습니다.  
+저는 17년 1월부터 처음으로 Front-end 분야 공부를 시작했습니다.  
+새벽에 운동, 집에가는길 가끔 피시방 그 이외엔 공부에 매달렸습니다.  
 `Front-end직군으로 6월 중순 스타트업에 입사했습니다.`  
 
 - 당부의 말  
