--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "[스터디]모집공고 초안"
+title: "[스터디]모집공고"
 description: "Angular 2 와 Ionic 2를 이용한 애플리케이션 만들기"
 date: 2017-08-15
 tags: [Front-end, Angular2, Ionic2, Github]
