--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -109,4 +109,15 @@ Hexo, Jekyll 상관없습니다.
 개발자이지만 꼭 경험해봤으면 합니다.  
 스터디 그 이상의 효과를 보고 싶은 분은 와주셨으면 합니다.  
 
+> 모집 인원 및 기간  
+
+```sh
+- 모집인원
+1~2명  
+
+- 모집기간 
+1차: 8월 25일 금요일
+2차: 9월 1일 금요일  
+```
+
 # 이상 마치겠습니다. 읽어주셔서 감사합니다.  
