--- a/_posts/2017-08-15-[스터디]모집공고초안.md
+++ b/_posts/2017-08-15-[스터디]모집공고초안.md
@@ -92,7 +92,7 @@ Hexo, Jekyll 상관없습니다.
 비전공자입니다.  
 패스트캠퍼스 스쿨 3기 수료생입니다.  
 저는 17년 1월부터 처음으로 Front-end 분야 공부를 시작했습니다.  
-새벽에 운동, 집에가는길 가끔 피시방 그 이외엔 공부에 매달렸습니다.  
+새벽에 운동, 집에가는길 가끔 피시방 그 이외엔 공부를 했습니다.  
 `Front-end직군으로 6월 중순 스타트업에 입사했습니다.`  
 
 - 당부의 말  
