--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -1,10 +1,21 @@
 ---
 layout: post
 title: "[JS] 중고급#5"
-description: ""
+description: "JS중고급#5, 김영보"
 date: 2017-08-20
-tags: []
+tags: [JS중고급#5]
 comments: true
 share: true
 ---
+
+# Javascript 핵심  
+
+> 기능 핵심: Control  
+DOM: HTML, CSS 컨트롤  
+HTML5 API: File, INdexedDB  
+그래픽: SVG, Canvas, WebGL  
+통신: XMLHttpRequest, Socket  
+
+- 기술 핵심: Object: {name: value}  
+
 
