--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -11,11 +11,39 @@ share: true
 # Javascript 핵심  
 
 > 기능 핵심: Control  
+
 DOM: HTML, CSS 컨트롤  
 HTML5 API: File, INdexedDB  
 그래픽: SVG, Canvas, WebGL  
 통신: XMLHttpRequest, Socket  
 
 - 기술 핵심: Object: {name: value}  
+
+# 함수 형태  
+
+- 빌트인 Function 오브젝트  
+내장 함수  
+Function.prototype.call() {}  
+
+- function 오브젝트  
+function book() {}
+
+- function 인스턴스  
+new Book(), new 사용  
+Book.prototype 사용  
+
+# Function 오브젝트  
+
+- var sports = function() {};
+sports()
+
+- 엔진이 function 키워드를 만나면   
+빌트인 Function 오브젝트의 prototype에 연결된 프로퍼티로 Function 오브젝트 생성 `인스턴스 개념`  
+
+# 객체 지향 언어  
+
+- 자바스크립트는 객체 지향 프로그래밍 언어  
+Function 오브젝트를 독립된 객체로 인식, 접근  
+OOP 개념 이해 필요  
 
 
