--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -40,9 +40,62 @@ sports()
 - 엔진이 function 키워드를 만나면   
 빌트인 Function 오브젝트의 prototype에 연결된 프로퍼티로 Function 오브젝트 생성 `인스턴스 개념`  
 
-# 객체 지향 언어  
+## 객체 지향 언어  
 
 - 자바스크립트는 객체 지향 프로그래밍 언어  
 Function 오브젝트를 독립된 객체로 인식, 접근  
 OOP 개념 이해 필요  
+
+## 오브젝트 저장  
+
+- 호출하려면 생성한 Function 오브젝트 저장 필요  
+- 오브젝트 저장 형태  
+function 키워드로 생성한 Function 오브젝트를 {name: value} 형태로 저장  
+`{sports: Function 오브젝트}`  
+- 함수를 호출하면  
+1. 함수 이름으로 저장된 오브젝트 검색  
+2. value값을 구함.  
+3. value가 Function 오브젝트이면 호출.  
+
+> 생각전환  
+
+- 함수가 호출되면 자바스크립트 엔진은   
+싱행 환경을 인식하고 함수 코드 실행  
+
+- {key: value}형태에 맞추어 생각을 전환  
+자바스트립트 근본에 쉽게 접근 가능, 아키텍처와 매커니즘을 이해할 수 있다.  
+
+- function () {} 코드를 보면  
+{key: value}형태의 function 오브젝트가 연상되어야한다.  
+
+# 아키텍처, 메커니즘  
+
+> 아키텍처: Architecture  
+
+목적을 가직 구조  
+자바스크립트 목적을 달성하기 위한 구조  
+
+> 매커니즘: Mechanism  
+
+목적을 달성하기 위한 방법  
+목적에 따라 방향, 방법, 기준이 달라질 수 있음.  
+
+> 아키텍처와 매커니즘에 대한 정확한 이해  
+
+목적과 방법을 모르고 개발하는 모습  
+
+# 자바스크립트 목적  
+
+> 언어의 목적은 소통  
+
+> 자바스크립트 프로그램의 목적  
+
+프로그램을 통해 자바스크립트와 소통  
+문법을 지켜야 소통 가능  
+문법은 기본을 지키는 것  
+
+> 자바스크립트와 소통  
+
+자바스크립트 상태 파악  
+아키텍처와 메커니즘 이해  
 
