--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -86,8 +86,6 @@ function 키워드로 생성한 Function 오브젝트를 {name: value} 형태로
 
 # 자바스크립트 목적  
 
-> 언어의 목적은 소통  
-
 > 자바스크립트 프로그램의 목적  
 
 프로그램을 통해 자바스크립트와 소통  
@@ -98,4 +96,43 @@ function 키워드로 생성한 Function 오브젝트를 {name: value} 형태로
 
 자바스크립트 상태 파악  
 아키텍처와 메커니즘 이해  
+
+# Function 오브젝트 생성 순서, 방법  
+
+1. Function 오브젝트 생성  
+- {코드} function sports(){}  
+- sports는 생성한 Function 오브젝트 이름  
+- 오브젝트 타입이 "Function" 이며 빈 오브젝트  
+- 지금부터 아래 처리를 통해 빈 오브젝트를 채웁니다.  
+
+2. sports 오브젝트에 prototype 오브젝트 첨부  
+3. prototype에 constructor 프로퍼티 첨부  
+4. prototype.constructor에서 sports 오브젝트 전체를 참조할 수 있도록 설정  
+5. prototype에 __ proto __ 오브젝트 첨부  
+6. 빌트인 Object 의 prototype에 연결된 프로퍼티로 Object 인스턴스를 생성해 prototype.__ proto __ 에 첨부  
+7. sports 오브젝트에 __ proto __ 오브젝트를 첨부  
+8. 빌트인 Function 오브젝트의 prototype에 연결된 프로퍼티로 Function 인스턴스 생성  
+9. 생성한 Function인스턴스를 sports.__ proto __ 에 첨부  
+10. sports 오브젝트 프로퍼티에 초기값 설정.  
+
+> 실행 환경 인식  
+
+- 실행 환경 인식 필요성  
+함수가 호출 되었을 때 실행될 환경을 인식할 수 있어야 실행 환경에 맞추어 실행할 수 있음  
+
+- 실행 환경 설정 시점  
+Function 오브젝트를 생성하는 시점에 환경 설정  
+Function 오브젝트는 바로 실행하는 것이 아니므로 함수가 호출되었을 때 사용할 수 있게 환경 저장 필요  
+
+- 어디에 저장을?  
+생성한 Function오브젝트에 저장  
+{name: value}형태  
+
+> 내부 프로퍼티  
+
+엔진이 내부 처리에 사용하는 프로퍼티  
+스펙상의 사양으로 외부에서 접근 불가 
+
+- 표기  
+[[]]: [[scope]]  
 
