--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -196,7 +196,7 @@ var sports = function() {};
 function sports() {
   debugger;
   var player = 11;
-}
+
 
 function soccer () {
   return player;
@@ -205,5 +205,102 @@ var baseball = function () {
   soccer();
 };
 
+}
 sports();
+```
+
+1. 함수 선언문 해석  
+function sports() {}  
+
+2. 변수 초기화  
+var sports;  
+var member;  
+
+3. 자바스크립트 코드 실행  
+var sports = function () {}  
+var member = 123;  
+
+> 함수 앞에서 호출  
+
+- 함수 선언문은 초기화 단계에서 Function 오브젝트를 생성하므로 함수를 호출하는 위치에 영향을 받지 않음.  
+- 함수 앞에서 호출 가능  
+```js
+function sports() {
+	baseball();
+	function baseball() {console.log("야구")}
+}
+sports();
+```
+
+> 함수 선언문 오버라이딩  
+
+- 오버라이딩  
+함수 이름이 같은 때 함수 코드 대체  
+
+- 자바스크립트는  
+파라미터 수, 데이터 타입 체크하지 않음.  
+{key: value}로 저장하기 때문.  
+
+- 상황  
+초기화 단계에서 함수 선언문을 Function 오브젝트로 생성   
+
+# 4가지의 상황  
+
+```js
+############## 함수 선언문, 함수 호출, 함수 선언문
+# 축구 2
+function sports () {
+  console.log("축구 1");
+}
+
+sports();
+
+function sports() {
+  console.log("축구 2")
+}
+
+################ 함수 표현식, 함수 호출, 함수 표현식 
+# 축구 1
+window.onload = function () {
+var sports = function () {
+  console.log("축구 1")
+}
+sports();
+
+var sports = function () {
+  console.log("축구 2")
+  }
+};
+
+################ 함수 선언문, 함수 호출, 함수 표현식  
+# 축구 1
+window.onload = function() {
+  function sports() {
+    console.log("축구 1")
+  }
+  
+  sports();
+  
+  var sports = function () {
+
+      console.log("축구 2")
+    }
+
+}
+
+################ 함수 표현식, 함수 호출, 함수 선언문  
+# 축구 1
+window.onload = function() {
+  var sports = function () {
+    console.log("축구 1")
+  }
+  
+  sports();
+  
+  function sports() {
+
+      console.log("축구 2")
+    }
+
+}
 ```
