--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -99,6 +99,7 @@ function 키워드로 생성한 Function 오브젝트를 {name: value} 형태로
 
 # Function 오브젝트 생성 순서, 방법  
 
+``
 1. Function 오브젝트 생성  
 - {코드} function sports(){}  
 - sports는 생성한 Function 오브젝트 이름  
@@ -114,6 +115,7 @@ function 키워드로 생성한 Function 오브젝트를 {name: value} 형태로
 8. 빌트인 Function 오브젝트의 prototype에 연결된 프로퍼티로 Function 인스턴스 생성  
 9. 생성한 Function인스턴스를 sports.__ proto __ 에 첨부  
 10. sports 오브젝트 프로퍼티에 초기값 설정.  
+``
 
 > 실행 환경 인식  
 
@@ -303,4 +305,89 @@ window.onload = function() {
     }
 
 }
+```  
+
+# 아규먼트(arguments)  
+
+> length 프로퍼티  
+
+- 호출한 함수의 파라미터 수 
+get(1,2,3): 3개
+get([4,5],6): 2개  
+
+# 스코프 구조  
+
+> 스코프 구조  
+
+- 계층적 구조  
+- 스코프 안에 스코프가 있는 형태  
+
+> 스코프 설정 시점  
+
+- Function 오브젝트를 생성할 때  
+- 함수를 호출할 때 설정하지 않음  
+
+> 스코프 구조 형성 방법  
+
+- 밖에서 안으로 들어가면서 스코프 구조 형성  
+- 안에서 밖으로 나가며 스코프 범위 검색  
+
+# 글로벌 오브젝트  
+
+> 프로그램의 시작점  
+
+빌트인 오브젝트 중에 하나  
+
+> 글로벌 오브젝트 특성  
+
+전체 프로그램을 통해 하나만 존재  
+전체 프로그램: 모든 `<script>`에 작성한 코드  
+오브젝트 이름을 작성하지 않고 함수를 호출하면 글로벌 오브젝트로 간주  
+
+> 글로벌 오브젝트 생성  
+
+첫 번째`<script>`에서 한번만 생성  
+
+> new 연산자 사용 불가  
+
+# 글로벌 함수  
+
+> 함수 구분  
+
+글로벌 함수: 전역 함수  
+로컬 함수: 지역 함수  
+
+> 글로벌 함수  
+
+글로벌 오브젝트에 작성한 함수  
+
+> 지역 함수  
+
+함수 안에서 var 키워드를 사용한 함수와 함수 선언문  
+함수 안에서 var 키워드를 사용하지 않으면 글로벌 함수  
+`strict`모드 일 때: var를 사용하지 않고 함수를 선언하면 에러  
+글로벌 오브젝트에서 var 키워드를 사용하여 함수 선언 가능  
+
+# 바인딩  
+
+> 바인딩  
+
+구조적으로 결속된 삳태로 만드는 것  
+대상: 오브젝트와 프로퍼티 이름  
+```js
+var get = {
+	...qty: value,
+	... price: value
+}
 ```
+
+> 바인딩 목적  
+
+스코프 결정  
+스코프에서 이름 식별 --> 식별자 해결이라고 함  
+
+> 바인딩 시점 분류  
+
+- 정적 바인딩  
+- 동적 바인딩  
+
