--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -389,5 +389,33 @@ var get = {
 > 바인딩 시점 분류  
 
 - 정적 바인딩  
-- 동적 바인딩  
+초기화 단계에서 바인딩  
+함수 선언문 이름 바인딩  
+변수, 함수 표현식 이름 바인딩  
+대부분 정적 바인딩  
+`값은 바인딩 대상이 아님`  
 
+- 동적 바인딩  
+실행 단계에서 바인딩  
+
+## 바인딩 시점의 중요성  
+
+> 중요한 이유  
+
+바인딩할 때 스코프가 결정되기 때문  
+
+> Function 오브젝트 생성 시점에 스코프 결정  
+
+인식한 스코프를 [[Scope]]에 설정  
+정적 바인딩은 [[Scope]]를 스코프로 사용  
+스코프가 변경되지 않음
+
+> 같은 단계의 모든 함수의 스코프가 같음  
+
+```js
+function sports () {
+	var prize = 123;
+	function soccer() { prize += 123; };
+	function baseball() { return prize; };
+}
+```
