--- a/_posts/2017-08-20-중고급과정#5.md
+++ b/_posts/2017-08-20-중고급과정#5.md
@@ -419,3 +419,31 @@ function sports () {
 	function baseball() { return prize; };
 }
 ```
+
+## 프로퍼티 검색 방법  
+
+> [[Scope]] 프로퍼티에서 검색  
+
+함수를 실행할 때 [[Scope]]에서 프로퍼티 이름으로 검색  
+
+> 프로퍼티 검색을 위한 추가 처리 필요하지 않음  
+
+Function 오브젝트를 생성할 때 정적으로 바인딩하였기 떄문  
+
+> 처리 속도에 영향을 미치지 않음  
+
+# 렉시컬 환경  
+
+### 실행 콘텍스트  
+
+> 개요  
+
+함수의 실행 영역  
+함수 코드를 실행하고 실행 결과를 저장  
+
+> ES5 스펙상의 사양  
+
+외부 프로그램에서 접근 불가  
+
+
+
