--- a/_posts/2017-08-21-Angular-2-개발환경.md
+++ b/_posts/2017-08-21-Angular-2-개발환경.md
@@ -9,11 +9,38 @@ share: true
 ---
 
 ``sh
-현재
+작업환경
 Mac Sierra 버젼
+Atom
+
 ``
 
 # Angular 2 개발환경 구축하기  
 
+> 플러그인 설치  
+
+`command + ,`를 눌러 Settings 창을 열어서 Atom TypeScript를 설치한다.  
+
+> Cil 설치  
+
+통합 개발환경이다. 
+
+`npm install angular-cli -g`
+
+> Angular를 이용하여 디렉토리 생성  
+
+`ng new my-first-app`  
+해당 파일에 node_modules이 전부 설치되면 자동으로 완료된다.  
+
+> Angular 2 실행하기  
+
+모두 설치가 완료 되었다면
+`ng serve`를 입력하자  
+
+<img width="787" alt="2017-08-21 9 10 54" src="https://user-images.githubusercontent.com/25549306/29518669-4ad7ff36-86b5-11e7-87bb-199200db6ac9.png">
+
+위와같은 그림이 나오면 기본 세팅 완료.  
 
 
+
+   
