--- a/_posts/2017-08-21-Angular-2-개발환경.md
+++ b/_posts/2017-08-21-Angular-2-개발환경.md
@@ -29,12 +29,14 @@ Atom
 
 > Angular를 이용하여 디렉토리 생성  
 
-`ng new my-first-app`  
+`ng new first-app`  
 해당 파일에 node_modules이 전부 설치되면 자동으로 완료된다.  
 
 > Angular 2 실행하기  
 
 모두 설치가 완료 되었다면
+`cd first-app`을 이용해 디렉토리로 이동 후 
+
 `ng serve`를 입력하자  
 
 <img width="787" alt="2017-08-21 9 10 54" src="https://user-images.githubusercontent.com/25549306/29518669-4ad7ff36-86b5-11e7-87bb-199200db6ac9.png">
