--- a/_posts/2017-08-21-Angular-2-개발환경.md
+++ b/_posts/2017-08-21-Angular-2-개발환경.md
@@ -39,6 +39,8 @@ Atom
 
 `ng serve`를 입력하자  
 
+그 후 인터넷 주소창에 `localhost:4200` 입력
+
 <img width="787" alt="2017-08-21 9 10 54" src="https://user-images.githubusercontent.com/25549306/29518669-4ad7ff36-86b5-11e7-87bb-199200db6ac9.png">
 
 위와같은 그림이 나오면 기본 세팅 완료.  
