--- a/_posts/2017-08-15-[스터디]진행목적 및 계획.md
+++ b/_posts/2017-08-15-[스터디]진행목적 및 계획.md
@@ -15,15 +15,65 @@ share: true
 
 1. [진행목적](진행목적)  
 2. [진행방법](진행방법)  
-3. 
+3. [진행방법 세부](진행방법-세부)  
 
 ---
 
-# 진행목적  
+# 1. 진행목적  
 
+0. 나의 행복을 위함 행복하지 않으면 할 의욕이 떨어질 것이다.  
 1. 주 중의 공적인 시간을 제외한 나머지 시간을 자신의 공부 시간을 할당해 자기개발을 함.  
 2. 프로젝트 진행을 통해 결과물을 만들어 냄.  
-3. 나의 공부 방법을 되돌아 봄.
+3. 나의 공부 방법을 되돌아 봄.  
 
 
-# 진행방법
+# 2. 진행방법  
+
+0. Pre-mortem(사전 실패 요인 분석.)  
+1. 기획 (어떤 프로젝트를 진행 할 것인가.)  
+2. 설계 (프로젝트는 어떠한 기능으로 구성되어 있는가.)  
+3. UI/UX 디자인 (벤치마킹할 디자인을 가져온다.)  
+4. 개발 (Layout ~ 기능구현.)  
+5. 출시/배포 (마켓에 배포해보기.)  
+
+## 2-1. 진행방법 세부  
+
+> 기획 ~ UI/UX 디자인   
+
+1. 기능별 우선순위 자체 선정(MVP 선정)  
+2. 10주 간 Sprint 나누기(MVP 기준)  
+3. 디자인 참고 시안 찾기  
+4. 디자인을 보고 BEM방식으로 class 부여하기  
+
+> 개발  
+
+`base: Angular 2, Ionic 2`  
+
+1. Layout(HTML5, CSS3, SASS)  
+2. 기능구현(Javascript, Jquery)  
+
+- component(컴포넌트의 개념을 이해하려 노력하자.)  
+- module(SASS, Javascript 등 공통기능을 모듈화 시키려 노력하자.)  
+
+> 작업공유    
+
+1. Trello(Sprint별 내용, Check List를 만들어 관리)  
+2. Google drive daily scrum (회의 진행자료, 내가 어떤 작업을 했는지 파악)  
+
+> 버젼관리  
+
+1. Github를 통한 버젼관리. 세부사항 추후 작성  
+
+> Gitblog 
+
+1. 프로젝트기간 작업 기록을 문서화  
+
+> 출시/배포  
+
+- 추후 공지  
+
+    
+
+
+
+
