--- a/_posts/2017-08-26-[스터디]진행목적 및 계획.md
+++ b/_posts/2017-08-26-[스터디]진행목적 및 계획.md
@@ -13,9 +13,9 @@ share: true
 
 # 목차  
 
-1. [진행목적](진행목적)  
-2. [진행방법](진행방법)  
-3. [진행방법 세부](진행방법-세부)  
+1. [진행목적](#진행목적)  
+2. [진행방법](#진행방법)  
+3. [진행방법 세부](#진행방법-세부)  
 
 ---
 
