--- a/_posts/2017-08-26-[스터디]진행목적 및 계획.md
+++ b/_posts/2017-08-26-[스터디]진행목적 및 계획.md
@@ -21,7 +21,7 @@ share: true
 
 # 1. 진행목적  
 
-0. 나의 행복을 위함 행복하지 않으면 할 의욕이 떨어질 것이다.  
+0. 개인의 행복을 위해 행복하지 않으면 할 의욕이 떨어질 것이다.  
 1. 주 중의 공적인 시간을 제외한 나머지 시간을 자신의 공부 시간을 할당해 자기개발을 함.  
 2. 프로젝트 진행을 통해 결과물을 만들어 냄.  
 3. 나의 공부 방법을 되돌아 봄.  
