--- a/_posts/2017-08-26-[스터디]진행목적 및 계획.md
+++ b/_posts/2017-08-26-[스터디]진행목적 및 계획.md
@@ -19,7 +19,7 @@ share: true
 
 ---
 
-# 1. 진행목적  
+# 진행목적  
 
 0. 개인의 행복을 위해 행복하지 않으면 할 의욕이 떨어질 것이다.  
 1. 주 중의 공적인 시간을 제외한 나머지 시간을 자신의 공부 시간을 할당해 자기개발을 함.  
@@ -27,7 +27,7 @@ share: true
 3. 나의 공부 방법을 되돌아 봄.  
 
 
-# 2. 진행방법  
+# 진행방법  
 
 0. Pre-mortem(사전 실패 요인 분석.)  
 1. 기획 (어떤 프로젝트를 진행 할 것인가.)  
@@ -36,7 +36,7 @@ share: true
 4. 개발 (Layout ~ 기능구현.)  
 5. 출시/배포 (마켓에 배포해보기.)  
 
-## 2-1. 진행방법 세부  
+## 진행방법 세부  
 
 > 기획 ~ UI/UX 디자인   
 
