--- a/_posts/2017-08-27-중고급과정#6.md
+++ b/_posts/2017-08-27-중고급과정#6.md
@@ -11,8 +11,12 @@ share: true
 # 목차  
 
 1. [렉시컬 환경](#렉시컬-환경)  
-
-
+  - [렉시컬 환경 구성](#렉시컬-환경-구성)
+	-	[렉시컬 환경 이해](#렉시컬-환경-이해)	
+	- [외부 렉시컬 환경 참조](#외부-렉시컬-환경-참조)
+	- [검색 메커니즘](#검색-메커니즘)
+	
+	
 ---
 
 # 렉시컬 환경  
@@ -84,6 +88,10 @@ share: true
 > [[Scope]] 사용  
 
 Function Object를 생성할 때  
+
+
+
+
 
 
 ---
