--- a/_posts/2017-08-27-중고급과정#6.md
+++ b/_posts/2017-08-27-중고급과정#6.md
@@ -89,13 +89,42 @@ share: true
 
 Function Object를 생성할 때  
 
+## this 바인딩 컴포넌트  
 
+> 목적  
 
+this로, 호출한 함수가 속한 오브젝트의 프로퍼티에 악세스  
+`ex) this.property_name`  
+
+> 악세스 메커니즘
+
+호출한 함수가 속한 오브젝트를 참조할 수 있도록
+this 바인딩 컴포넌트에 호출된 함수가 속한 오브젝트 참조 설정  
+obj.sports()에서 this로 obj 참조  
+obj를 this 바인딩  
+
+## 함수, 변수 바인딩  
+
+> 바인딩 순서  
+
+1. 파라미터 이름/값을 선언적 환경 레코드에 설정  
+2. 함수 선언문을 Function 오브젝트로 생성하여 선언적 환경 레코드에 설정  
+3. arguments 오브젝트를 선언적 환경 레코드에 바인딩  
+4. 변수와 함수 표현식을 선언적 환경 레코드에 바인딩  
+
+> 설정과 바인딩 차이  
+
+설정은 프로퍼티 이름이 존재하더라도 값을 할당  
+파라미터 이름과 함수 이름이 같으면 함수로 대체됨  
+
+바인딩은 프로퍼티 이름이 존재
 
 
 
 ---
 
 # 질문사항  
+
+> 기획 - 개발  
 
 요구사항 -> 분석 -> 목표 -> Use-case(사용자, 시스템) -> (선생님 문서 볼 것)
