--- a/_posts/2017-08-26-[스터디]기획.md
+++ b/_posts/2017-08-26-[스터디]기획.md
@@ -62,3 +62,25 @@ share: true
 - Write: 미정
 - Detail: 미정    
 
+> Angular 2 
+
+1. nodejs, webpack, gulp, grunt, babel, es6 개념 짚고 넘어가기
+2. typescript 환경설정 및 js로 변환되는 원리 이해하기
+3. typescript 문법 익히기
+4. angular 구조 및 아키텍쳐 이해하기
+5. angular cli 소개 및 개발도구 설치 환경설정 프로젝트 만들기
+6. 컴포넌트
+7. 서비스
+8. 모듈
+9. 라우터
+10. 의존성 주입
+11. 템플릿
+12. 지시자
+13. 파이프
+14. 폼
+15. 애니메이션
+16. 보안
+17. http
+18. 생명주기
+19. 테스트
+
