--- a/_posts/2017-08-27-중고급과정#6.md
+++ b/_posts/2017-08-27-중고급과정#6.md
@@ -15,7 +15,8 @@ share: true
 	-	[렉시컬 환경 이해](#렉시컬-환경-이해)	
 	- [외부 렉시컬 환경 참조](#외부-렉시컬-환경-참조)
 	- [검색 메커니즘](#검색-메커니즘)
-	
+	- [함수, 변수 바인딩](#함수,-변수-바인딩)
+  	
 	
 ---
 
@@ -119,6 +120,51 @@ obj를 this 바인딩
 
 바인딩은 프로퍼티 이름이 존재
 
+# this  
+
+> this와 글로벌 오브젝트  
+
+- this 참조  
+글로벌 오브젝트에 this는 글로벌 오브젝트 참조  
+this 바인딩 컴포넌트에 글로벌 오브젝트가 설정되기 때문  
+
+```js
+function get() {
+  console.log('사과')
+};
+
+var sports = function () {
+  function get() {
+    console.log('애플')
+  };
+  this.get();
+  get()
+};
+
+sports()
+```
+
+`this는 부른 시점에 있는 것과 동등상의 obj를 찾는다.`  
+
+## this와 인스턴스  
+
+> this의 목적
+
+호출한 함수가 속한 오브젝트 참조  
+
+> 인스턴스 생성 목적은?  
+
+인스턴스마다 고유의 값 유지  
+this로 인스턴스 참조  
+this.name 형태로 인스턴스의 name 프로퍼티에 접근  
+
+> __ proto __ 프로퍼티 접근  
+
+prototype에 연결된 프로퍼티가 인스턴스의 __ proto __ 에 첨부되며 this.method()형태로 __ proto __ 첨부된 method() 호출  
+
+
+
+
 
 
 ---
@@ -127,4 +173,12 @@ obj를 this 바인딩
 
 > 기획 - 개발  
 
-요구사항 -> 분석 -> 목표 -> Use-case(사용자, 시스템) -> (선생님 문서 볼 것)
+요구사항 -> 분석 -> 목표 -> Use-case(사용자, 시스템) -> 
+
+> 요구사항, 분석, Use-case 목적  
+
+- 문서화 목적  
+
+문서 정리를 하여 요구자에게 컨펌을 받기 위함.  
+내가 요구사항을 정리하기 위함.  
+
