--- a/_posts/2017-08-27-중고급과정#6.md
+++ b/_posts/2017-08-27-중고급과정#6.md
@@ -15,9 +15,9 @@ share: true
 	-	[렉시컬 환경 이해](#렉시컬-환경-이해)	
 	- [외부 렉시컬 환경 참조](#외부-렉시컬-환경-참조)
 	- [검색 메커니즘](#검색-메커니즘)
-	- [함수, 변수 바인딩](#함수,-변수-바인딩)
-  	
-	
+	- [함수, 변수 바인딩](#함수--변수-바인딩)
+2. [this](#this)  	
+	- [this와 인스턴스](#this와-인스턴스)
 ---
 
 # 렉시컬 환경  
