--- a/_posts/2017-08-27-중고급과정#6.md
+++ b/_posts/2017-08-27-중고급과정#6.md
@@ -17,7 +17,8 @@ share: true
 	- [검색 메커니즘](#검색-메커니즘)
 	- [함수, 변수 바인딩](#함수--변수-바인딩)
 2. [this](#this)  	
-	- [this와 인스턴스](#this와-인스턴스)
+	- [this와 인스턴스](#this와-인스턴스)  
+  
 ---
 
 # 렉시컬 환경  
@@ -161,6 +162,90 @@ this.name 형태로 인스턴스의 name 프로퍼티에 접근
 > __ proto __ 프로퍼티 접근  
 
 prototype에 연결된 프로퍼티가 인스턴스의 __ proto __ 에 첨부되며 this.method()형태로 __ proto __ 첨부된 method() 호출  
+
+## call()과 this  
+
+```js
+// 글로벌 오브젝트에 this가 소속되어 있다.
+var value = 100;
+var get = function(one) {
+  var value = 456;
+  return one + this.value;
+}
+
+console.log(get.call(this, 50))
+```
+
+```js
+// call의 목적 this자리를 변경할 수 있다.
+var get = function (value){
+  return this.base * this.rate + value;
+}
+var result = get.call({base:20, rate:30}, 50);
+console.log(result);
+
+var obj = {value: 100};
+var values = [1,2,3].map(function() {
+  
+})
+
+```
+
+## this 참조 변경  
+
+```js
+// call
+// this를 참조를 변경했다.
+var sports = {
+  value: 123,
+  soccer: {
+    value: 456,
+    get: function() {
+      return this.value;
+    };
+  }
+};
+
+console.log()sports.soccer.get.call(sports);
+console.log()sports.soccer.get.call(sports.soccer);
+```
+## bind()와 this  
+
+```js
+var bonus = {
+  value: 123,
+  get:function() {
+    return this.value;
+  }
+};
+
+console.log(bonus.get());
+var fnObj = bonus.get.bind();
+console.log(typeof foObj);
+console.log(fnObj());
+
+fnObj = bonus.get.bind(bonus);
+console.log(fnObj());
+```
+
+## bind() 활용  
+
+```js
+window.onload = function () {
+  var el = document.getElemnetByid('ClickID');
+  el.onclick = show.bind(sports, el);
+}
+
+var sports = {
+  value: 123
+};
+
+function show (element, event) {
+  console.log(element.textContent);
+  console.log(event.target.id);
+  console.log(this.value);
+}
+```
 
 
 
