--- a/_posts/2017-08-27-중고급과정#6.md
+++ b/_posts/2017-08-27-중고급과정#6.md
@@ -247,7 +247,22 @@ function show (element, event) {
 }
 ```
 
+# prototype  
 
+> prototype 오브젝트 목적  
+
+프로퍼티 연결을 통한 프로퍼티 확장  
+생성한 각 인스턴스에서 prototype의 프로퍼티 공유  
+다른 Function 인스턴스를 상속받음  
+
+> 프로퍼티 확장  
+
+prototype이 오브젝트이므로 프로퍼티를 연결하여 확장 가능  
+
+> 프로퍼티 공유  
+
+prototype에 연결된 프로퍼티로 인스턴스 생성  
+인스턴스에서 prototype에 연결된 프로퍼티 값 공유  
 
 
 
