--- a/_posts/2017-08-26-[스터디]기획.md
+++ b/_posts/2017-08-26-[스터디]기획.md
@@ -14,7 +14,7 @@ share: true
 # 목차  
 
 1. [전체기획](#전체기획)  
-
+2. [교재](교재)
 
 ---
 
@@ -83,4 +83,12 @@ share: true
 17. http
 18. 생명주기
 19. 테스트
+
+# 교재  
+
+제목: Angular with TypeScript Development  
+지음: Yakov Fain, Anton Moiseev  
+옮김: 한장현  
+
+선택이유: 현 시점에서 가장 최신 책  
 
