--- a/_posts/2017-08-26-[스터디]진행목적 및 계획.md
+++ b/_posts/2017-08-26-[스터디]진행목적 및 계획.md
@@ -2,20 +2,21 @@
 layout: post
 title: "[스터디]진행은 어떻게 할 것인가."
 description: "Angular 2 와 Ionic 2를 이용한 애플리케이션 만들기"
-date: 2017-08-26
+date: 2017-09-05
 tags: [Front-end, Angular2, Ionic2, Github]
 comments: true
 share: true
 ---
 
 최초작성일: 17.08.26  
-최종작성일: 17.08.26  
+최종작성일: 17.09.05  
 
 # 목차  
 
 1. [진행목적](#진행목적)  
 2. [진행방법](#진행방법)  
 3. [진행방법 세부](#진행방법-세부)  
+4. [P.S.](#P-S-)
 
 ---
 
@@ -34,7 +35,7 @@ share: true
 2. 설계 (프로젝트는 어떠한 기능으로 구성되어 있는가.)  
 3. UI/UX 디자인 (벤치마킹할 디자인을 가져온다.)  
 4. 개발 (Layout ~ 기능구현.)  
-5. 출시/배포 (마켓에 배포해보기.)  
+5. ~~출시/배포 (마켓에 배포해보기.)~~  
 
 ## 진행방법 세부  
 
@@ -58,11 +59,13 @@ share: true
 > 작업공유    
 
 1. Trello(Sprint별 내용, Check List를 만들어 관리)  
-2. Google drive daily scrum (회의 진행자료, 내가 어떤 작업을 했는지 파악)  
+2. ~~Google drive daily scrum (회의 진행자료, 내가 어떤 작업을 했는지 파악)~~  
 
 > 버젼관리  
 
-1. Github를 통한 버젼관리. 세부사항 추후 작성  
+1. ~~Github를 통한 버젼관리.~~
+
+
 
 > Gitblog 
 
@@ -70,10 +73,19 @@ share: true
 
 > 출시/배포  
 
-- 추후 공지  
+- ~~추후 공지~~  
 
     
+# P.S.  
 
+- Angular 진행 후 ionic 을 시행할 것.  
+- 불필요한 작업 툴 안할 것. 현 수준에 맞게 진행 할 것.
+    1. Google drive daily scrum -> Trello 대체  
+    2. Github 버젼관리  
+    3. 출시/배포  
+    
+## 스터디 후 작성 할 것.(월, 수 필수)  
 
-
-
+1. Gitblog를 작성하여 내가 무엇을 했는지 문서화 한다.  
+2. Trello를 작성하여 내가 무엇해야하고 무엇을 하는지 기록한다.  
+    
