--- a/_posts/2017-11-19-[GDG Korea]프론트엔드 프레임워크 파헤치기.md
+++ b/_posts/2017-11-19-[GDG Korea]프론트엔드 프레임워크 파헤치기.md
@@ -3,7 +3,7 @@ layout: post
 title: "[GDG Korea]프론트엔드 프레임워크 파헤치기"
 description: "[GDG Korea]프론트엔드 프레임워크 파헤치기"
 date: 2017-11-19
-tags: [[GDG Korea] 프론트엔드 프레임워크 파헤치기
+tags: [GDG Korea 프론트엔드 프레임워크 파헤치기]
 comments: true
 share: false
 ---
