--- a/_posts/2017-11-25-[개발방법론] 무엇을 어떻게 사용할 것인가.md
+++ b/_posts/2017-11-25-[개발방법론] 무엇을 어떻게 사용할 것인가.md
@@ -9,9 +9,95 @@ share: true
 ---
 
 최초작성일: 17.11.25  
-최종작성일: 17.11.25  
+최종작성일: 17.11.26  
 
-`Focus, 새로 시작하는 프로젝트 뿌리잡기.`  
+`Focus, 구조적 접근.`  
 
 ---
 
+현재 Html, Css에 구조적 모습이 없고 마구잡이로 작성.  
+구조적으로 설계를 하고싶다.  
+
+---  
+
+# 1. 설계  
+
+- base/  
+- components/  
+- layout/  
+- pages/  
+- themes/  
+- utils/  
+- vendors/  
+
+```sass
+sass/
+|
+|- base/
+|   |- _reset.sass       # Reset/normalize
+|   |- _typography.sass  # 타이포그래피 규칙
+|   ...                  # 기타.
+|
+|- components/
+|   |- _buttons.sass     # 버튼
+|   |- _carousel.sass    # 캐러셀  
+|   |- _cover.sass       # 커버  
+|   |- _dropdown.sass    # 드롭다운
+|   ...                  # 기타.  
+|
+|- layout/
+|   |- _navigation.sass  # 네비게이션
+|   |- _grid.sass        # 그리드 시스템   
+|   |- _header.sass      # 헤더
+|   |- _footer.sass      # 푸터
+|   |- _sidebar.sass     # 사이드바
+|   |- _forms.sass       # 폼
+|   ...                  # 기타.
+|
+|- pages/
+|   |- _home.sass        # 홈 한정 스타일
+|   |- _contact.sass     # 연락처 한정 스타일
+|   ...                  # 기타.
+|
+|- themes/
+|   |- _theme.sass       # 디폴트 테마 
+|   |- _admin.sass       # 관리자 테마
+|   ...                  # 기타.
+|
+|- utils/
+|   |- _variables.sass   # Sass 변수
+|   |- _functoins.sass   # Sass 함수
+|   |- _mixins.sass      # Sass 믹스인   
+|   |- _helper.sass      # 클래스 & 플레이스홀더 헬퍼 
+|   ...                  # 기타.
+|
+|- vendors/
+|   |- _bootstrap.sass   # Bootstrap   
+|   |- _jquery-ui.sass   # jquery Ui   
+|   ...                  # 기타.
+|
+|
+- main.sass              # 메인 Sass 파일
+
+```
+
+코드를 보다 설계절으로 관리할 수 있다. 직접 해봐야하지만 위 사항으로도 Sass를 선택할 이유가 된다고 판단은 안되지만.  
+새로운 환경을 구축하고자 한다.  
+
+# 2. Angular와 호환  
+
+Angular내에서 Sass를 사용할 수 있다.
+[호환가이드](https://scotch.io/tutorials/using-sass-with-the-angular-cli)
+
+# 3. mixin을 이용한 코드 재사용  
+
+```scss
+/// 내부 float을 해제하는 헬퍼
+/// @author Nicolas Gallagher
+/// @link http://nicolasgallagher.com/micro-clearfix-hack/ Micro Clearfix
+@mixin clearfix 
+  &::after 
+    content: ''
+    display: table
+    clear: both
+```
