Mixin, include add

--- a/_posts/2017-11-25-[개발방법론] 무엇을 어떻게 사용할 것인가.md
+++ b/_posts/2017-11-25-[개발방법론] 무엇을 어떻게 사용할 것인가.md
@@ -86,18 +86,39 @@ sass/
 
 # 2. Angular와 호환  
 
-Angular내에서 Sass를 사용할 수 있다.
+Angular내에서 Sass를 사용할 수 있다.    
+
 [호환가이드](https://scotch.io/tutorials/using-sass-with-the-angular-cli)
 
 # 3. mixin을 이용한 코드 재사용  
 
 ```scss
-/// 내부 float을 해제하는 헬퍼
-/// @author Nicolas Gallagher
-/// @link http://nicolasgallagher.com/micro-clearfix-hack/ Micro Clearfix
-@mixin clearfix 
-  &::after 
-    content: ''
-    display: table
-    clear: both
+// 믹스인 지정 
+// root :  _mixin.sass  
+
+=size( $size : 1.2)
+  transform: scale( $size )
+
+=transition-ease($second: 0.4s, $motion: ease)
+  transition: all $second $motion
+
+=width-center-auto($width)
+  width: $width
+  margin: 0 auto
+  text-align: center
+  
+// include 믹스인 사용하기
+// 파일 최상단 @import
+// root : _style.sass  
+
+@import 'mixin'
+
+h1
+  +size(1.2)
+  +width-center-auto(450px)
 ```
+
+# 출처  
+
+1. [Sass Guidelines_ko](https://sass-guidelin.es/ko/#mixins)  
+2. [Angular와 호환 방법](https://scotch.io/tutorials/using-sass-with-the-angular-cli)  
