--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -11,7 +11,7 @@ share: true
 최초작성일: 18.03.18  
 최종작성일: 18.03.18  
 
-`프로젝트의 기능은 최소화, 효과는 극대화`  
+`프로젝트 기능은 최소화, 효과는 극대화`  
 
 ---
 
@@ -19,16 +19,17 @@ share: true
 - [목표](#목표)  
 - [기본기능](#기본기능)
 - [차별성](#차별성)
+- [참고모델](#참고모델)  
 --- 
 
 # 목표
 1. 포트폴리오  
 2. 기술적 기본기능 구현(CRUD)
-3. 협업  
+3. 협업(design, develop)  
 
 # 기본기능  
 
-> CRUD  
+1. CRUD  
 
 
 
@@ -36,3 +37,11 @@ share: true
 
 > 폴라로이드  
 
+
+# 참고모델  
+
+1. 카드 다이어리 app
+2. 세줄일기 app  
+3. 원데이 app  
+
+[목차가기](#목차)
