--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -9,7 +9,7 @@ share: true
 ---
 
 최초작성일: 18.03.18  
-최종작성일: 18.03.18  
+최종작성일: 18.03.19  
 
 `프로젝트 기능은 최소화, 효과는 극대화`  
 
@@ -17,26 +17,40 @@ share: true
 
 ### 1. 목차  
 - [목표](#목표)  
-- [기본기능](#기본기능)
+- [기능](#기능)
 - [차별성](#차별성)
 - [참고모델](#참고모델)  
+
 --- 
 
 # 목표
 1. 포트폴리오  
-2. 기술적 기본기능 구현(CRUD)
+2. 기술적 기본기능 구현(CRUD)  
 3. 협업(design, develop)  
 
-# 기본기능  
+- 가볍게 만들고싶다.  
+
+[목차가기](#목차)  
+
+# 기능  
+
+> 기본기능  
 
 1. CRUD  
+2. 캘린더  
+
+> 부가기능  
+
+추후 반영  
 
 
+[목차가기](#목차)  
 
 # 차별성  
 
 > 폴라로이드  
 
+[목차가기](#목차)  
 
 # 참고모델  
 
@@ -44,4 +58,4 @@ share: true
 2. 세줄일기 app  
 3. 원데이 app  
 
-[목차가기](#목차)
+[목차가기](#목차)  
