--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -15,7 +15,7 @@ share: true
 
 ---
 
-### 1. 목차  
+# 목차  
 - [목표](#목표)  
 - [기능](#기능)
 - [차별성](#차별성)
@@ -23,7 +23,7 @@ share: true
 
 --- 
 
-# 목표
+### 목표  
 1. 포트폴리오  
 2. 기술적 기본기능 구현(CRUD)  
 3. 협업(design, develop)  
@@ -32,7 +32,7 @@ share: true
 
 [목차가기](#목차)  
 
-# 기능  
+### 기능  
 
 > 기본기능  
 
@@ -46,13 +46,13 @@ share: true
 
 [목차가기](#목차)  
 
-# 차별성  
+### 차별성  
 
-> 폴라로이드  
+1. 폴라로이드  
 
 [목차가기](#목차)  
 
-# 참고모델  
+### 참고모델  
 
 1. 카드 다이어리 app
 2. 세줄일기 app  
