--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -16,8 +16,10 @@ share: true
 ---
 
 # 목차  
+1. 기획  
 - [목표](#목표)  
-- [기능](#기능)
+- [기능](#기능)  
+- [이름](#이름)
 - [차별성](#차별성)
 - [참고모델](#참고모델)  
 
@@ -34,29 +36,38 @@ share: true
 
 ### 기능  
 
-> 기본기능  
+> MVP    
 
 1. CRUD  
-2. 캘린더  
 
 > 부가기능  
 
-추후 반영  
+2. 캘린더  
 
 
-[목차가기](#목차)  
+[[목차가기]](#목차)  
+
+### 이름  
+
+- 티켓 다이어리  
+- 커버 다이어리  
+- 앨범 다이어리  
+
+다이어리를 쓴 이유는 검색어 때문.  
+
+
 
 ### 차별성  
 
 1. 폴라로이드  
 2. 다이어리에 달력이 없다?  
 
-[목차가기](#목차)  
+[[목차가기]](#목차)  
 
 ### 참고모델  
 
 1. 카드 다이어리 app
 2. 세줄일기 app  
 3. 원데이 app  
-
-[목차가기](#목차)  
+4. 데이그램 app  
+[[목차가기]](#목차)  
