--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -9,7 +9,7 @@ share: true
 ---
 
 최초작성일: 18.03.18  
-최종작성일: 18.03.19  
+최종작성일: 18.03.20  
 
 `프로젝트 기능은 최소화, 효과는 극대화`  
 
@@ -52,7 +52,11 @@ share: true
 - 티켓 다이어리  
 - 커버 다이어리  
 - 앨범 다이어리  
+- 자켓 다이어리  
+- 포켓 다이어리  
+- 피드백 다이어리  
 
+in the pocket  
 다이어리를 쓴 이유는 검색어 때문.  
 
 
