--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -42,7 +42,9 @@ share: true
 
 > 부가기능  
 
-2. 캘린더  
+1. 캘린더  
+2. 플립  
+3. 
 
 
 [[목차가기]](#목차)  
@@ -55,6 +57,7 @@ share: true
 - 자켓 다이어리  
 - 포켓 다이어리  
 - 피드백 다이어리  
+- 책자 다이어리  
 
 in the pocket  
 다이어리를 쓴 이유는 검색어 때문.  
