--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -9,7 +9,7 @@ share: true
 ---
 
 최초작성일: 18.03.18  
-최종작성일: 18.03.20  
+최종작성일: 18.03.25  
 
 `프로젝트 기능은 최소화, 효과는 극대화`  
 
@@ -22,6 +22,7 @@ share: true
 - [이름](#이름)
 - [차별성](#차별성)
 - [참고모델](#참고모델)  
+- [현재상황](#현재상황)
 
 --- 
 
@@ -78,3 +79,9 @@ in the pocket
 3. 원데이 app  
 4. 데이그램 app  
 [[목차가기]](#목차)  
+
+### 현재상황  
+
+1. 네이밍 완료  
+2. 기간 조정 완료  
+3. SRS 제작중  
