--- a/_posts/2018-03-14-[프로젝트]합동플젝.md
+++ b/_posts/2018-03-14-[프로젝트]합동플젝.md
@@ -9,7 +9,7 @@ share: true
 ---
 
 최초작성일: 18.03.18  
-최종작성일: 18.03.25  
+최종작성일: 18.04.06    
 
 `프로젝트 기능은 최소화, 효과는 극대화`  
 
@@ -84,6 +84,8 @@ in the pocket
 
 1. 네이밍 완료  
 2. 기간 조정 완료  
-3. SRS 제작중
-4. 컨셉모델 제작
-5. 페르소나 기준 사용자 요구사항 작성  
+3. SRS 제작중  
+4. 컨셉모델 제작  
+5. 페르소나 기준 사용자 요구사항 작성    
+6. 기획 토대로 작성, 읽기 기능 구현 시작.  
+
