--- a/_posts/2018-05-02-[ionic 프레임워크로로 IOS 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 IOS 배포하기].md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "['18 해커톤 no.1]"
-description: "GCP 해커톤"
+title: "[ionic 프레임워크로로 IOS 배포하기]"
+description: "ionic, ios"
 date: 2018-03-18
-tags: [프로젝트]
+tags: [다이어리, 프로젝트]
 comments: true
 share: true
 ---
@@ -16,25 +16,29 @@ share: true
 # 목차  
 1. 기획  
 - [목표](#목표)  
-- [기능](#기능)
+- [기능](#기능)  
+- [이름](#이름)
+
 
 ---
 
 ### 목표  
 
-내가 아는 지식 확장
-빅쿼리 이용
-에러가 날만한 부분에 대한 질문을 예측하여 스택오버플로우 질문을 미리 추천함
-구글링에 익숙하지 않은사람에게 코드 에러방지 및 에러발생시 대안 제공
+빅쿼리 이용  
+코드 가이드  
+에러가 날만한 부분에 대한 질문을 예측하여 스택오버플로우 질문을 미리 추천함  
+구글링에 익숙하지 않은사람에게 코드 에러방지 및 에러발생시 대안 제공  
+
+
 
 [목차가기](#목차)  
 
 ### 기능  
 
-> 스택오버플로우(결정)
+> 스택오버플로우(결정)  
 
 에러가 나는 부분에 대한 질문을 예측하여 스택오버플로우 질문을 미리 추천함.  
-- 스택오버플로우 & 빅쿼리의 조합으로 질문 예측 및 미리 답변
+- 스택오버플로우 & 빅쿼리의 조합으로 
 
 
 > 깃허브  
@@ -48,6 +52,9 @@ share: true
 그림판에 추상적 그림 > 구체적 그림  
 대상에 따른 목적이 달라짐  
 
+> 메디  
+
+증상 > 진단 > 처방 > 가격 도출  
 
 [[목차가기]](#목차)  
 
@@ -59,16 +66,20 @@ G1B4
 코코아  
 코린이  
 코쟁이  
-코카인 << 당선
+코카인  
 
-[[목차가기]](#목차)
+
+
+### 차별성  
+
+
+
+[[목차가기]](#목차)  
 
 ### 참고모델  
 
 코드펜,
-코드카데미
-스텍오버플로우
-
+코드카데미  
 [[목차가기]](#목차)  
 
 ### 사용기술  
@@ -78,6 +89,10 @@ G1B4
    4. VUE.JS
    5. Javascript & J-query + CSS & HTML
 
-### 구현
+### 구현  
 
-[발표자료](../assets/발표.pdf)
+
+
+
+
+
