--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -49,7 +49,8 @@ share: true
 
 > app 파일 생성
 
-1. Run a production build of your app with ₩ionic cordova build ios --prod₩
-2. Open the ₩.xcodeproj₩ file in ₩platforms/ios/₩ in Xcode
+1. Run a production build of your app with `ionic cordova build ios --prod`
+2. Open the `.xcodeproj`₩ file in ₩platforms/ios/` in Xcode\
 3. Connect your phone via USB and select it as the run target
 4. Click the play button in Xcode to try to run your app
+₩
