--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -50,7 +50,21 @@ share: true
 > app 파일 생성
 
 1. Run a production build of your app with `ionic cordova build ios --prod`
-2. Open the `.xcodeproj`₩ file in ₩platforms/ios/` in Xcode\
+2. Open the `.xcodeproj` file in `platforms/ios/` in Xcode\
 3. Connect your phone via USB and select it as the run target
 4. Click the play button in Xcode to try to run your app
-₩
+
+```
+1번 과정 중 에러
+
+<img width="891" alt="2018-05-03 12 09 17" src="https://user-images.githubusercontent.com/25549306/39558596-e9fc093a-4eca-11e8-97a2-c648f08691ee.png">
+
+에러 당시 inoic info
+
+<img width="493" alt="2018-05-03 12 09 38" src="https://user-images.githubusercontent.com/25549306/39558598-ebdaf5f4-4eca-11e8-8590-69a1f5beee95.png">
+
+```
+
+
+>
+
