--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -20,6 +20,8 @@ share: true
 - [준비물](#준비물)
 - [방법](#방법)
     - [Xcode 계정설정](#Xcode-계정설정)
+    - [app 파일 생성](#app-파일-생성)
+    - [Xcode 계정설정](#Xcode-계정설정)
 
 
 [[목차가기]](#목차)
@@ -54,6 +56,7 @@ share: true
 3. Connect your phone via USB and select it as the run target
 4. Click the play button in Xcode to try to run your app
 
+단, code signing에러가 나와도 상관없다고함.
 ```
 1번 과정 중 에러
 
@@ -63,8 +66,21 @@ share: true
 
 <img width="493" alt="2018-05-03 12 09 38" src="https://user-images.githubusercontent.com/25549306/39558598-ebdaf5f4-4eca-11e8-8590-69a1f5beee95.png">
 
+해결방법
+
+--port >> --release
+ionic cordova build android --release
+
 ```
 
+```
+3번 과정 중
+<img width="420" alt="2018-05-03 2 48 07" src="https://user-images.githubusercontent.com/25549306/39561519-2f3d0f56-4ee1-11e8-8ceb-31a7e6b5dcba.png">
+
+타겟은 나의 핸드폰으로 한다.
+```
 
 >
+
+
 
