--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -75,12 +75,21 @@ ionic cordova build android --release
 
 
 ### 3번 과정 중
+<img width="1042" alt="2018-05-03 2 51 22" src="https://user-images.githubusercontent.com/25549306/39561952-efb97c68-4ee3-11e8-8bd6-cc9e491ff2a8.png">
+
 <img width="420" alt="2018-05-03 2 48 07" src="https://user-images.githubusercontent.com/25549306/39561519-2f3d0f56-4ee1-11e8-8ceb-31a7e6b5dcba.png">
 
 타겟은 나의 핸드폰으로 한다.
 
+<img width="447" alt="2018-05-03 3 06 58" src="https://user-images.githubusercontent.com/25549306/39561961-f7bdd3e6-4ee3-11e8-8f0d-b5d772f02145.png">
 
->
+위의 그림이 나올 시 신뢰 확인한다.
+`설정 > 일반 > 기기 관리 > 본인 아이디 > ...`
+
+
+> 인증서
+
+막혀있음
 
 
 
