--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -21,7 +21,7 @@ share: true
 - [방법](#방법)
     - [Xcode 계정설정](#Xcode-계정설정)
     - [app 파일 생성](#app-파일-생성)
-    - [Xcode 계정설정](#Xcode-계정설정)
+    - [인증서 설정](#인증서-설정)
 
 
 [[목차가기]](#목차)
@@ -87,9 +87,19 @@ ionic cordova build android --release
 `설정 > 일반 > 기기 관리 > 본인 아이디 > ...`
 
 
-> 인증서
 
-막혀있음
+> 인증서 설정
+
+1. Identifier
+2. Certificate
+3. Provisioning
+
+> 앱스토어 등록
+
+- 스크린샷(5.5 inch기준): 1242 × 2208 px로 조정
+- 미리보기(5.5 inch기준): 1080 x 1920 px로 조정
+
+
 
 
 
