--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -94,10 +94,22 @@ ionic cordova build android --release
 2. Certificate
 3. Provisioning
 
+
+bundle Id가 핵심 걸림돌.
+`Xcode`의 `bundle Id`와 `Identifier`의 `bundle Id`가 동일해아함
 > 앱스토어 등록
 
 - 스크린샷(5.5 inch기준): 1242 × 2208 px로 조정
 - 미리보기(5.5 inch기준): 1080 x 1920 px로 조정
+
+`알파 해체`가 마지막 업로드시 걸림돌로 작용되었다.
+
+```js
+# 알파 전체해체하기
+
+1. brew install imagemagick
+2. find ./resources/ -name “*.png” -exec convert “{}” -alpha off “{}” \;
+```
 
 
 
