--- a/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
+++ b/_posts/2018-05-02-[ionic 프레임워크로로 ios 배포하기].md
@@ -94,10 +94,13 @@ ionic cordova build android --release
 2. Certificate
 3. Provisioning
 
+위 순서로 진행된다. `Bundle Id`를 잘 이용해야한다.
+
 
 bundle Id가 핵심 걸림돌.
 `Xcode`의 `bundle Id`와 `Identifier`의 `bundle Id`가 동일해아함
 > 앱스토어 등록
+
 
 - 스크린샷(5.5 inch기준): 1242 × 2208 px로 조정
 - 미리보기(5.5 inch기준): 1080 x 1920 px로 조정
