--- a/_posts/2018-05-19-[피아노 레슨__01].md
+++ b/_posts/2018-05-19-[피아노 레슨__01].md
@@ -19,6 +19,8 @@ share: true
 
 > 사용은 언제?
 
+- 소리연결, 강조할 때
+
 1. 코드 바뀔 때
 2. 마디 바뀔 때
 
@@ -32,6 +34,10 @@ share: true
 ```
 
 ## 코드
+
+- 이명동음(같은음 2가지 이름)
+
+5 - 4:
 
 1. major
 
