--- a/_posts/2018-06-09-[피아노 레슨__02].md
+++ b/_posts/2018-06-09-[피아노 레슨__02].md
@@ -26,7 +26,23 @@ share: true
 
 ` Db | Eb | Gb | Ab | Bb `와 같이 검은건반이 요구되는 코드를 칠 때 손을 건반의 상단부터 손 자체를 올린다.
 
-# 코드분석
+## 코드분석
 
 멜로디: 보통 오른손
 베이스: 보통 왼손
+
+
+`베이스를 기준`으로 코드를 부여하자.
+
+
+
+## 부족한 점
+
+> 계이름표를 봤을 때 무슨 음인지 한 참 생각함
+
+해결방안: 반복학습
+
+> 코드를 봤을 때  어떤 코드들이 속해있는지 생각 안남
+  
+`탑노트`를 기준으로 손의 위치가 변경될 수 있다.
+해결방안: 1, 3, 5음을 반복해서 숙달하자.
